--- a/旅居服务站-mini/project.private.config.json
+++ b/旅居服务站-mini/project.private.config.json
@@ -3,7 +3,7 @@
   "projectname": "%E6%97%85%E5%B1%85%E6%9C%8D%E5%8A%A1%E7%AB%99-mini",
   "condition": {},
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "coverView": true,
     "lazyloadPlaceholderEnable": false,
     "skylineRenderEnable": false,
