fix: 统一主题服务，更新合并后的页面引用

--- a/app.json
+++ b/app.json
@@ -14,6 +14,15 @@
     "pages/user/support/index",
     "pages/user/settings/index",
     "pages/user/message/chat",
+    "pages/message/index/index",
+    "pages/message/chat/chat",
+    "pages/skill/index/index",
+    "pages/skill/task-list/task-list",
+    "pages/skill/task-detail/task-detail",
+    "pages/skill/video-list/video-list",
+    "pages/skill/video-detail/video-detail",
+    "pages/skill/resource-list/resource-list",
+    "pages/skill/resource-publish/resource-publish",
     "pages/auth/login/index",
     "pages/auth/identity/index",
     "pages/square/index/index",
