--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,7 @@
 {
   "libVersion": "3.14.1",
   "projectname": "%E6%97%85%E5%B1%85%E6%9C%8D%E5%8A%A1%E7%AB%99",
+  "condition": {},
   "setting": {
     "urlCheck": true,
     "coverView": true,
@@ -8,16 +9,15 @@
     "skylineRenderEnable": false,
     "preloadBackgroundData": false,
     "autoAudits": false,
-    "showShadowRootInWxmlPanel": true,
-    "compileHotReLoad": true,
     "useApiHook": true,
+    "showShadowRootInWxmlPanel": true,
     "useStaticServer": false,
     "useLanDebug": false,
     "showES6CompileOption": false,
+    "compileHotReLoad": true,
     "checkInvalidKey": true,
     "ignoreDevUnusedFiles": true,
     "bigPackageSizeSupport": false,
     "useIsolateContext": true
-  },
-  "condition": {}
+  }
 }
