feat: 新增草稿箱功能
- 创建草稿箱页面 pages/user/drafts
- 支持全部/帖子/房源/资源分类筛选
- 支持继续编辑和删除草稿
- 用户中心入口跳转到草稿箱
- 显示草稿数量角标

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/user/edit-profile/index",
     "pages/user/orders/index",
     "pages/user/publish-list/index",
+    "pages/user/drafts/index",
     "pages/user/history/index",
     "pages/user/support/index",
     "pages/user/settings/index",
