--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,29 @@
 {
   "name": "travel-service-backend",
-  "version": "1.0.0",
-  "description": "旅居服务站后端 - 微信小程序登录服务",
+  "version": "1.1.0",
+  "description": "旅居服务站后端 - 微信小程序服务端",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["wechat", "miniprogram", "authentication"],
+  "keywords": [
+    "wechat",
+    "miniprogram",
+    "authentication",
+    "travel"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.1.0",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
